
Known problems:
    1. The "_parent" and "_empty" frame targets are not handled correctly
    2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. HttpUnit does not support JavaScript
    2. JDK 1.2 or higher is required


Revision History:
14-Mar-2002
Additions:
    1. It is now possible to set the action on a form using a mechanism which will support scripting in the future:
              form.getScriptableObject().setAction( newAction )

11-Mar-2002

Additions:
    1. HttpUnit now sends Accept-encoding: gzip unless disabled by a call to HttpUnitOptions.setAcceptGzip( false )

Notes:
    1. Hidden fields may not be modified if parameter validation is enabled, since they cannot be modified through
       normal user interaction (in the absence of JavaScript).


 6-Mar-2002 1.4
Acknowledgements:
    Thanks to Didier Besset for correcting the WebForm methods: hasParameterNamed and hasParameterStartingWithPrefix
    Thanks to Stefan G. Renz for identifying the infinite loop bug in frame handling
    Thanks to Alex Chaffee for implementing context parameters for web.xml in ServletUnit
    Thanks to Jochen Hiller for supplying code to use jaxp to select a parser rather than being hardcoded to xerces
    Thanks to Oliver Imbusch for adding the WebClientListener behavior
    Thanks to Donald Ball for numerous additions to ServletUnit, including support for context paths, retrieval of
            the requestURI for a servlet request, and wild-card mapping of servlets.
    Thanks to Peter Royal for correcting handling of long line numbers in JTidyWriter, based on locale
    Thanks to Peter Rossbach for some documentation and build fixes


Problems fixed:
    1. hasParameterNamed and hasParameterStartingWithPrefix now check all types of parameters, not just <INPUT> fields