@@ -26,6 +26,7 @@ import junit.framework.TestCase;
 import junit.framework.TestSuite;
 
 import java.util.Vector;
+import java.io.File;
 
 
 /**
@@ -248,6 +249,22 @@ public class FormParametersTest extends HttpUnitTest {
         request.setParameter( "age", "12" );
         request.setParameter( "big", "stop me" );
     }
+
+
+public void testFileParameterValue() throws Exception {
+    defineWebPage( "Default", "<form method=POST action='/ask'>" +
+                              "<Input type=file name=File>" +
+                              "<Input type=submit value=Upload></form>" );
+    WebResponse page = _wc.getResponse( getHostPath() + "/Default.html" );
+    WebForm form = page.getForms()[0];
+    String[] values = form.getParameterValues( "File" );
+    assertEquals( "Number of file parameter values", 1, values.length );
+    assertEquals( "Default selected filename", "", values[0] );
+
+    final File file = new File( "dummy.txt" );
+    form.setParameter( "File", new UploadFileSpec[] { new UploadFileSpec( file ) } );
+    assertEquals( "Selected filename", file.getAbsolutePath(), form.getParameterValue( "File" ) );
+}
 
 
 //---------------------------------------------- private members ------------------------------------------------
